--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "yandex_praktikum",
+	"name": "yandex_praktikum",
+	"homepage": "https://nata-shu.github.io/praktikum/",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "rimraf dist && webpack --mode production",
-    "dev": "webpack-dev-server --mode development --open --watch"
+		"dev": "webpack-dev-server --mode development --open --watch",
+		"deploy": "gh-pages -d dist"
   },
   "author": "Наташа",
   "license": "ISC",
@@ -22,7 +24,7 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.2",
     "cssnano": "^4.1.10",
-    "gh-pages": "^2.2.0",
+    "gh-pages": "~2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
